common/examples/editors/de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dlParser.java
// $ANTLR 3.0 ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g 2009-05-02 13:07:41

package de.cau.cs.kieler.ssm2.dsl.parser;

import org.eclipse.emf.common.util.Enumerator;
import org.eclipse.emf.ecore.EObject;

import org.openarchitectureware.xtext.parser.impl.AntlrUtil;
import org.openarchitectureware.xtext.XtextFile;
import org.openarchitectureware.xtext.parser.impl.EcoreModelFactory;
import org.openarchitectureware.xtext.parser.ErrorMsg;
import org.openarchitectureware.xtext.parser.model.ParseTreeManagerNeu;
import org.openarchitectureware.xtext.parser.parsetree.Node;

import de.cau.cs.kieler.ssm2.dsl.MetaModelRegistration;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class ssm2dlParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "RULE_ID", "RULE_INT", "RULE_STRING", "RULE_WS", "RULE_ML_COMMENT", "RULE_SL_COMMENT", "'/'", "'('", "')'", "'='", "'not'", "'<'", "'<='", "'and'", "'or'", "'+'", "'-'", "'*'", "'?'"
    };
    public static final int RULE_ID=4;
    public static final int RULE_STRING=6;
    public static final int RULE_INT=5;
    public static final int RULE_WS=7;
    public static final int RULE_SL_COMMENT=9;
    public static final int EOF=-1;
    public static final int RULE_ML_COMMENT=8;

        public ssm2dlParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[30+1];
         }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g"; }



    	private Token getLastToken() {
    		return input.LT(-1);
    	}

    	protected Object convert(Object arg) {
    		if (arg instanceof org.antlr.runtime.Token) {
    			Token t = (Token) arg;
    			String s = t.getText();
    			if (t.getType() == ssm2dlLexer.RULE_ID && s.startsWith("^")) {
    				return s.substring(1);
    			} else if (t.getType()==ssm2dlLexer.RULE_STRING) {
    				return s.substring(1,s.length()-1);
    			} else if (t.getType()==ssm2dlLexer.RULE_INT) {
    				return Integer.valueOf(s);
    			}
    			return s;
    		}
    		return arg;
    	}


    	private EcoreModelFactory factory = new EcoreModelFactory(MetaModelRegistration.getEPackage());
        private ParseTreeManagerNeu ptm = new ParseTreeManagerNeu();
    	private XtextFile xtextfile = MetaModelRegistration.getXtextFile();
    	
    	{
    			factory.addImport("ssm2", "http://www.informatik.uni-kiel.de/rtsys/ssm2");
    		
    	}

    	public ParseTreeManagerNeu getResult() {
    		return ptm;
    	}

    	private List<ErrorMsg> errors = new ArrayList<ErrorMsg>();
    	public List<ErrorMsg> getErrors() {
    		return errors;
    	}

    	@Override
    	public void reportError(RecognitionException e) {
    		String msg = super.getErrorMessage(e,tokenNames);
    		errors.add(AntlrUtil.create(msg,e,tokenNames));
    		ptm.addError(msg, e);
    		// This doesn't work. ANTLR may simply report an superfluous token. In that case,
    		// two nodes will be finished instead of one.
    		// ptm.ruleFinished(null, end());
    	}

        private boolean skipCurrentToken;
        
    	@Override
    	protected boolean recoverFromMismatchedElement(IntStream arg0, RecognitionException arg1, BitSet arg2) {
    		skipCurrentToken = true;
    		return super.recoverFromMismatchedElement(arg0, arg1, arg2);
    	}



    // $ANTLR start parse
    // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:102:1: parse returns [Node r] : result= ruleAction EOF ;
    public Node parse() throws RecognitionException {
        Node r = null;
        int parse_StartIndex = input.index();
        EObject result = null;


        try {
            if ( backtracking>0 && alreadyParsedRule(input, 1) ) { return r; }
            // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:103:3: (result= ruleAction EOF )
            // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:103:3: result= ruleAction EOF
            {
            pushFollow(FOLLOW_ruleAction_in_parse67);
            result=ruleAction();
            _fsp--;
            if (failed) return r;
            if ( backtracking==0 ) {

              if (result != null)
                ptm.setModelElement(result);
              r = ptm.getCurrent();
              ptm.ruleFinished(result);
            }
            match(input,EOF,FOLLOW_EOF_in_parse78); if (failed) return r;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 1, parse_StartIndex); }
        }
        return r;
    }
    // $ANTLR end parse


    // $ANTLR start ruleAction
    // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:113:1: ruleAction returns [EObject result] : ( (temp_Expression= ruleExpression )? ( '/' ) ( (temp_Emission= ruleEmission ) | (temp_Assignment= ruleAssignment ) )* ) ;
    public EObject ruleAction() throws RecognitionException {
        EObject result = null;
        int ruleAction_StartIndex = input.index();
        EObject temp_Expression = null;

        EObject temp_Emission = null;

        EObject temp_Assignment = null;


        boolean hasContent = false;
        try {
            if ( backtracking>0 && alreadyParsedRule(input, 2) ) { return result; }
            // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:116:4: ( ( (temp_Expression= ruleExpression )? ( '/' ) ( (temp_Emission= ruleEmission ) | (temp_Assignment= ruleAssignment ) )* ) )
            // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:116:4: ( (temp_Expression= ruleExpression )? ( '/' ) ( (temp_Emission= ruleEmission ) | (temp_Assignment= ruleAssignment ) )* )
            {
            if ( backtracking==0 ) {

              				result = factory.create("ssm2", "Action");
              			 
            }
            // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:119:1: ( (temp_Expression= ruleExpression )? ( '/' ) ( (temp_Emission= ruleEmission ) | (temp_Assignment= ruleAssignment ) )* )
            // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:119:2: (temp_Expression= ruleExpression )? ( '/' ) ( (temp_Emission= ruleEmission ) | (temp_Assignment= ruleAssignment ) )*
            {
            // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:119:2: (temp_Expression= ruleExpression )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( ((LA1_0>=RULE_ID && LA1_0<=RULE_INT)||LA1_0==11) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:119:3: temp_Expression= ruleExpression
                    {
                    if ( backtracking==0 ) {
                      ptm.createNode(((EObject)((EObject)((EObject)xtextfile.eContents().get(1)).eContents().get(1)).eContents().get(0)));
                    }
                    pushFollow(FOLLOW_ruleExpression_in_ruleAction107);
                    temp_Expression=ruleExpression();
                    _fsp--;
                    if (failed) return result;
                    if ( backtracking==0 ) {
                      if (temp_Expression != null) {
                        hasContent = true;
                        ptm.setModelElement(temp_Expression);
                        factory.set(result,"trigger",convert(temp_Expression),false);
                        ptm.ruleFinished(temp_Expression);
                      } else {
                        ptm.destroyNode();
                      }

                    }

                    }
                    break;

            }

            // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:131:1: ( '/' )
            // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:131:2: '/'
            {
            if ( backtracking==0 ) {
              skipCurrentToken = false;
            }
            match(input,10,FOLLOW_10_in_ruleAction116); if (failed) return result;
            if ( backtracking==0 ) {
              if (!skipCurrentToken) {
                hasContent = true;
                ptm.createNode(((EObject)((EObject)((EObject)xtextfile.eContents().get(1)).eContents().get(1)).eContents().get(1)));
                ptm.ruleFinished(getLastToken());
              }
            }

            }

            // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:137:1: ( (temp_Emission= ruleEmission ) | (temp_Assignment= ruleAssignment ) )*
            loop2:
            do {
                int alt2=3;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==RULE_ID) ) {
                    int LA2_2 = input.LA(2);

                    if ( (LA2_2==EOF||(LA2_2>=RULE_ID && LA2_2<=RULE_INT)||LA2_2==11) ) {
                        alt2=1;
                    }
                    else if ( (LA2_2==13) ) {
                        alt2=2;
                    }


                }
                else if ( (LA2_0==RULE_INT) ) {
                    alt2=2;
                }


                switch (alt2) {
            	case 1 :
            	    // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:137:2: (temp_Emission= ruleEmission )
            	    {
            	    // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:137:2: (temp_Emission= ruleEmission )
            	    // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:137:3: temp_Emission= ruleEmission
            	    {
            	    if ( backtracking==0 ) {
            	      ptm.createNode(((EObject)((EObject)((EObject)((EObject)xtextfile.eContents().get(1)).eContents().get(1)).eContents().get(2)).eContents().get(0)));
            	    }
            	    pushFollow(FOLLOW_ruleEmission_in_ruleAction127);
            	    temp_Emission=ruleEmission();
            	    _fsp--;
            	    if (failed) return result;
            	    if ( backtracking==0 ) {
            	      if (temp_Emission != null) {
            	        hasContent = true;
            	        ptm.setModelElement(temp_Emission);
            	        factory.add(result,"emissions",convert(temp_Emission),false);
            	        ptm.ruleFinished(temp_Emission);
            	      } else {
            	        ptm.destroyNode();
            	      }

            	    }

            	    }


            	    }
            	    break;
            	case 2 :
            	    // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:149:1: (temp_Assignment= ruleAssignment )
            	    {
            	    // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:149:1: (temp_Assignment= ruleAssignment )
            	    // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:149:2: temp_Assignment= ruleAssignment
            	    {
            	    if ( backtracking==0 ) {
            	      ptm.createNode(((EObject)((EObject)((EObject)((EObject)xtextfile.eContents().get(1)).eContents().get(1)).eContents().get(2)).eContents().get(1)));
            	    }
            	    pushFollow(FOLLOW_ruleAssignment_in_ruleAction140);
            	    temp_Assignment=ruleAssignment();
            	    _fsp--;
            	    if (failed) return result;
            	    if ( backtracking==0 ) {
            	      if (temp_Assignment != null) {
            	        hasContent = true;
            	        ptm.setModelElement(temp_Assignment);
            	        factory.add(result,"assignments",convert(temp_Assignment),false);
            	        ptm.ruleFinished(temp_Assignment);
            	      } else {
            	        ptm.destroyNode();
            	      }

            	    }

            	    }


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            if ( backtracking==0 ) {
              if (!hasContent)
                result = null;
            }

            }

        }
        catch (RecognitionException re) {
            if (!hasContent)
                result = null;
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 2, ruleAction_StartIndex); }
        }
        return result;
    }
    // $ANTLR end ruleAction


    // $ANTLR start ruleExpression
    // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:169:1: ruleExpression returns [EObject result] : (temp_signalreference= ruleSignalReference | temp_variablereference= ruleVariableReference | temp_complexexpression= ruleComplexExpression );
    public EObject ruleExpression() throws RecognitionException {
        EObject result = null;
        int ruleExpression_StartIndex = input.index();
        EObject temp_signalreference = null;

        EObject temp_variablereference = null;

        EObject temp_complexexpression = null;


        try {
            if ( backtracking>0 && alreadyParsedRule(input, 3) ) { return result; }
            // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:171:9: (temp_signalreference= ruleSignalReference | temp_variablereference= ruleVariableReference | temp_complexexpression= ruleComplexExpression )
            int alt3=3;
            switch ( input.LA(1) ) {
            case RULE_ID:
                {
                int LA3_1 = input.LA(2);

                if ( (synpred4()) ) {
                    alt3=1;
                }
                else if ( (synpred5()) ) {
                    alt3=2;
                }
                else {
                    if (backtracking>0) {failed=true; return result;}
                    NoViableAltException nvae =
                        new NoViableAltException("169:1: ruleExpression returns [EObject result] : (temp_signalreference= ruleSignalReference | temp_variablereference= ruleVariableReference | temp_complexexpression= ruleComplexExpression );", 3, 1, input);

                    throw nvae;
                }
                }
                break;
            case RULE_INT:
                {
                alt3=2;
                }
                break;
            case 11:
                {
                alt3=3;
                }
                break;
            default:
                if (backtracking>0) {failed=true; return result;}
                NoViableAltException nvae =
                    new NoViableAltException("169:1: ruleExpression returns [EObject result] : (temp_signalreference= ruleSignalReference | temp_variablereference= ruleVariableReference | temp_complexexpression= ruleComplexExpression );", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:171:9: temp_signalreference= ruleSignalReference
                    {
                    pushFollow(FOLLOW_ruleSignalReference_in_ruleExpression179);
                    temp_signalreference=ruleSignalReference();
                    _fsp--;
                    if (failed) return result;
                    if ( backtracking==0 ) {
                      result =temp_signalreference;
                    }

                    }
                    break;
                case 2 :
                    // ..//de.cau.cs.kieler.ssm2.dsl/src-gen/de/cau/cs/kieler/ssm2/dsl/parser/ssm2dl.g:171:91: temp_variablereference= ruleVariableReference
                    {
                    pushFollow(FOLLOW_ruleVariableReference_in_ruleExpression194);
                    temp_variablereference=ruleVariableReference();
                    _fsp--;
                    if (failed) return result;
                    if ( backtracking==0 ) {
                      result =temp_variablereference;
                    }
